<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tori_tools</name>
  <version>0.0.0</version>
  <description>Tools for torisuke</description>
  <maintainer email="ksk.tahara@gmail.com">ktaha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joy_teleop</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
